--- a/src/pages/panel/message/styles/MessagesHistory.css
+++ b/src/pages/panel/message/styles/MessagesHistory.css
@@ -50,6 +50,9 @@
     .history-conversation {
         width: 97%;
         margin-bottom: 20px;
+        padding: 0px;
+        max-height: 100%;
+        border: 1px solid var(--border-color);
     }
     h2 {
         display: none;
@@ -59,6 +62,9 @@
     .history-conversation {
         width: 90%;
         margin-bottom: 20px;
+        padding: 0px;
+        max-height: 100%;
+        border: 1px solid var(--border-color);
     }
     h2 {
         display: none;
