[0004] - fix: improve error messages, responsiveness in messages & friends components, and layout

--- a/src/pages/panel/friends/styles/FriendsInvite.css
+++ b/src/pages/panel/friends/styles/FriendsInvite.css
@@ -54,7 +54,7 @@
 
     .friends-invite-layout input,
     .friends-invite-layout button {
-        width: 90%;
+        /* width: 90%; */
         max-width: none;
     }
 }
