--- a/src/pages/panel/message/styles/MessagesFriend.css
+++ b/src/pages/panel/message/styles/MessagesFriend.css
@@ -1,7 +1,7 @@
 .messages-view {
-    max-height: calc(100% - 50px);
+    max-height: calc(100% - 35px);
     overflow-y: auto;
-    min-height: calc(70% - 50px);
+    max-height: calc(100% - 35px);
     flex-grow: 1;
     background-color: var(--box-bg);
     padding: 20px 20px 0px 20px;
@@ -9,6 +9,10 @@
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     scrollbar-width: none;
     transition: background-color 0.4s ease;
+    border: 1px solid var(--border-color);
+    display: flex;
+    flex-direction: column;
+    height: 100%; 
 }
 
 .-webkit-scrollbar {
@@ -17,7 +21,7 @@
 
 .messages-view h2 {
     font-size: 1.5rem;
-    margin-bottom: 10px;
+    margin-top: 0px;
 }
 
 .messages-view h2 {
@@ -26,12 +30,22 @@
     border-bottom: 1px solid #ccc;
     gap: 10px;
     transition: background-color 0.4s ease;
+    margin: 0px;
 }
 
 .message-history {
     flex-grow: 1;
-    margin-bottom: 20px;
-}
+    overflow-y: auto;
+    padding: 10px;
+    /* display: flex;
+    flex-direction: column;
+    gap: 10px; */
+    scrollbar-width: none; /* Esconde a barra de scroll no Firefox */
+  }
+  
+  .message-history::-webkit-scrollbar {
+    display: none; /* Esconde a barra de scroll no Chrome/Safari */
+  }
 
 .sent {
     justify-content: flex-end;
@@ -52,7 +66,7 @@
 
 /* Mensagem enviada (usuário) */
 .sent .bubble {
-    background-color: var(--bubble-sent);    
+    background-color: var(--bubble-sent);
     color: white;
     border-bottom-right-radius: 2px;
     transition: background-color 0.4s ease;
@@ -79,7 +93,7 @@ textarea {
     border-radius: 5px;
     border: 1px solid #ccc;
     resize: none;
-    margin-bottom: 10px;
+    /* margin-bottom: 10px; */
     background-color: var(--text-box);
     color: var(--text-color);
 }
@@ -93,6 +107,7 @@ textarea {
     display: flex;
     gap: 10px;
     transition: background-color 0.4s ease;
+    margin-top: 20px;
 }
 
 @media (max-width: 768px) {
@@ -100,7 +115,7 @@ textarea {
         width: 96%;
     }
 
-    h2 {
+    .messages-view h2 {
         display: none;
     }
 }
@@ -110,7 +125,7 @@ textarea {
         width: 86%;
     }
 
-    h2 {
+    .messages-view h2 {
         display: none;
     }
 }
