--- a/src/pages/panel/message/styles/MessagesHistory.css
+++ b/src/pages/panel/message/styles/MessagesHistory.css
@@ -1,14 +1,14 @@
 .history-conversation {
-    max-height: calc(50.5% - 50px);
+    max-height: calc(50.5% - 37px);
     overflow-y: auto;
-    min-height: calc(20% - 50px);
     width: 250px;
     background-color: var(--box-bg);
-    padding: 15px;
+    padding: 0px 15px 15px 15px;
     border-radius: 10px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     scrollbar-width: none;
     transition: background-color 0.4s ease;
+    border: 1px solid var(--border-color);
 }
 
 .-webkit-scrollbar {
@@ -17,10 +17,10 @@
 
 .history-conversation h2 {
     font-size: 1.5rem;
-    margin-bottom: 10px;
-}
-
-.history-conversation h2 {
+    margin-top: 0px;
+    top:0;
+    margin-top: 0px;
+    padding-top: 0px;
     position: sticky;
     background: var(--box-bg);
     border-bottom: 1px solid #ccc;
@@ -52,10 +52,12 @@
         margin-bottom: 20px;
         padding: 0px;
         max-height: 100%;
-        border: 1px solid var(--border-color);
+        /* border: 1px solid var(--border-color); */
     }
-    h2 {
-        display: none;
+    .history-conversation h2 {
+        /* display: none; */
+        font-size: 1rem;
+        text-align: center;
     }
 }
 @media (max-width: 480px) {
@@ -64,9 +66,11 @@
         margin-bottom: 20px;
         padding: 0px;
         max-height: 100%;
-        border: 1px solid var(--border-color);
+        /* border: 1px solid var(--border-color); */
     }
-    h2 {
-        display: none;
+    .history-conversation h2 {
+        /* display: none; */
+        font-size: 1rem;
+        text-align: center;
     }    
 }
