[0002] - implementing chat message.

--- a/src/pages/panel/message/styles/MessageOnlineFriends.css
+++ b/src/pages/panel/message/styles/MessageOnlineFriends.css
@@ -1,5 +1,6 @@
 .online-friends {
     max-height: calc(50.5% - 37px);
+    min-height: calc(50.5% - 37px);
     overflow-y: auto;
     width: 250px;
     background-color: var(--box-bg);
