--- a/src/pages/panel/message/styles/MessagesFriend.css
+++ b/src/pages/panel/message/styles/MessagesFriend.css
@@ -57,6 +57,7 @@
 
 .bubble {
     /* max-width: 60%; */
+    margin-bottom: 10px;
     padding: 10px 15px;
     border-radius: 16px;
     font-size: 14px;
@@ -69,7 +70,7 @@
     background-color: var(--bubble-sent);
     color: white;
     border-bottom-right-radius: 2px;
-    transition: background-color 0.4s ease;
+    /* transition: background-color 0.4s ease; */
 }
 
 /* Mensagem recebida (outro usuário) */
@@ -77,7 +78,7 @@
     background-color: var(--bubble-received);
     color: white;
     border-bottom-left-radius: 2px;
-    transition: background-color 0.4s ease;
+    /* transition: background-color 0.4s ease; */
 }
 
 .received {
@@ -113,6 +114,7 @@ textarea {
 @media (max-width: 768px) {
     .messages-view {
         width: 96%;
+        padding-top: 0px;
     }
 
     .messages-view h2 {
@@ -123,6 +125,7 @@ textarea {
 @media (max-width: 480px) {
     .messages-view {
         width: 86%;
+        padding-top: 0px;
     }
 
     .messages-view h2 {
