--- a/src/pages/panel/friends/styles/FriendsList.css
+++ b/src/pages/panel/friends/styles/FriendsList.css
@@ -9,6 +9,13 @@
     transition: background-color 0.4s ease;
 }
 
+.friends-list {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    align-items: center;
+}
+
 .friends-list-layout h2 {
     font-size: 22px;
     color: var(--text-color);
